# New-Rust-Template

./: Cargo.toml  cargo-generate.toml  pre-generate.rhai
.devcontainer/: devcontainer.json
src/: init.rs  main.rs
